<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutList">


    <TextView
        android:id="@+id/Chesttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/Apptitle"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/subtitlepage"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/apptitledesc"
        android:textAlignment="center"
        android:textColor="#4C5067"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Chesttitle" />


    <View
        android:id="@+id/divpage"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="#25293E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitlepage" />


    <LinearLayout
        android:id="@+id/workoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subIntroDesc">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@drawable/chestworking" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/cheatUpper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="Chest Day"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/workoutoneDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="8sp"
                android:text="Upper | Middle | Lower"
                android:textAlignment="center"
                android:textColor="#4C5067"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/workouttwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutOne">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@drawable/absday" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/workouttwotitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="Abs Day"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/workouttwoDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="8sp"
                android:text="48 mins of a fast burn "
                android:textAlignment="center"
                android:textColor="#4C5067"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/workoutthree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workouttwo">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@drawable/armday" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/workoutthreetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="Arms Day"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/workoutthreeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="8sp"
                android:text="Arms and shoulder "
                android:textAlignment="center"
                android:textColor="#4C5067"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/workoutfour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutthree">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@drawable/legday" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/workoutfourtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="Leg Day"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/workoutfourDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="8sp"
                android:text="Legs and Calf"
                android:textAlignment="center"
                android:textColor="#4C5067"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>


    <!--<View-->
        <!--android:id="@+id/bgprogress"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:background="#80DDD0"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/navigation"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->


    <!--<TextView-->
        <!--android:id="@+id/btnexercise"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="@string/btnstart"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:textSize="22sp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/navigation"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.552"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/bgprogress"-->
        <!--app:layout_constraintVertical_bias="1.0" />-->


    <TextView
        android:id="@+id/subIntroDesc"
        android:layout_width="384dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/subIntroDesc"
        android:textColor="#4C5067"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunImtrotittle" />

    <TextView
        android:id="@+id/sunImtrotittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/sunIntrotittle"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divpage" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>